# LDR-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LEARNINGS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: Dockerfile
apps/backend/app/: cli.py  deps.py  error_handlers.py  logging.py  main.py  settings.py
apps/backend/app/auth/: agent.py  ingest_limits.py
apps/backend/app/db/: __init__.py  session.py
apps/backend/app/middleware/: request_id.py
apps/backend/app/routers/: alerts.py  db_smoke.py  entities.py  events.py  ingest.py  response.py
apps/backend/app/schemas/: alerts.py  entities.py  events.py  ingest.py  response.py
apps/backend/app/security/: rate_limit.py
apps/backend/app/utils/: dedupe.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_alerts_api.py  test_db_ping.py  test_detection_full_002_006.py  test_detection_runner.py  test_events_db.py  test_events_list_db.py  test_evidence_endpoint.py  test_flask_parse.py  test_ingest_db.py  test_ip_summary.py  test_nginx_parse.py  test_normalized_written.py  test_rate_limit.py  test_retention_cleanup.py  test_risk_endpoint.py
apps/dashboard/: Dockerfile  requirements.txt
apps/dashboard/dashboard/: api_client.py  app.py  config.py
apps/worker/: Dockerfile  worker.py
docs/: architecture.md  dev.md
docs/demo/: demo-script.md
rules/: LDR-WEB-001.yml  LDR-WEB-002.yml  LDR-WEB-003.yml  LDR-WEB-004.yml  LDR-WEB-005.yml  LDR-WEB-006.yml
scripts/: dev_up.sh  retention.sh  test_all.sh  trigger_all_rules.sh
(+46 files in other folders)
