[project]
name = "ldr-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]
pythonpath = ["apps/backend"]

[tool.setuptools]
package-dir = {"" = "apps/backend"}

[tool.setuptools.packages.find]
where = ["apps/backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
