[project]
name = "ldr-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "structlog>=24.0",
  "pyyaml>=6.0",

  # DB
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",

  # Settings
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
  "py>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]
pythonpath = ["apps/backend"]
markers = [
  "integration: tests that require external services like Postgres",
]

[tool.setuptools]
package-dir = {"" = "apps/backend"}

[tool.setuptools.packages.find]
where = ["apps/backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

